Compiler Bouw/compiler/test/basic/stephen/fail/types_parameters_length.cvc
#include "civic.h"

int kaas(int a, int b, bool c, float d, int e) {
    return 0;
}

export int main() {
    int a = 0;
    kaas(5, 1, false, 7.0);
    return 0;
}
